<resources>
    <string name="app_name">HongShopping</string>

    <string name="cancel">취소</string>

    <string name="item_buy">구매하기</string>
    <string name="item_buy_ignore">무시하고 구매하기</string>
    <string name="item_buy_all">모두 구매하기</string>
    <string name="item_buy_decide">결제하기</string>
    <string name="item_cart">장바구니 담기</string>
    <string name="item_delete">X</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="title_cart">Cart</string>
    <string name="title_heart">Heart</string>

    <string name="phone_number">전화번호</string>
    <string name="address">주소</string>
    <string name="hint_phone_number">\'-\'를 빼고 입력하세요.</string>
</resources>
