<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="8"
    android:columnCount="1"
    tools:context=".BuyActivity">

    <include
        layout="@layout/widget_toolbar"
        android:id="@+id/toolbar_buying"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="주문자 정보"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:rowCount="2"
        android:columnCount="2">

        <TextView
            android:layout_gravity="center"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />

        <TextView
            android:layout_gravity="center"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="상품 정보"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_item_buy"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:layout_gravity="fill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semi_white"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="선택 상품 개수" />

        <TextView
            android:id="@+id/quantity_sum_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/semi_white"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="총 결재 금액" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/price_sum_buy"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:text="@string/item_buy_decide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textColor="@color/white"
        app:backgroundTint="@color/black" />

</GridLayout>